# bookmarks-search-engine

./: LICENSE  README.md
bookmarks/: .gitignore  Cargo.toml  example_config.yml
bookmarks/src/: app.rs  lib.rs
bookmarks/src/application/: error.rs  mod.rs
bookmarks/src/domain/: mod.rs
bookmarks/src/domain/bookmark/: bookmark_factory.rs  bookmark_repository.rs  bookmark_search_engine.rs  mod.rs
bookmarks/src/ports/: mod.rs
bookmarks/src/ports/http/: mod.rs
bookmarks/src/ports/http/warp/: disable_caching.rs  mod.rs  search.rs  search_error_handling.rs  suggestions.rs
bookmarks/src/ports/persistence/file_system/: file_system_bookmark_repository_adapter.rs  memory_bookmark.rs  mod.rs  persistence_bookmark.rs
bookmarks/src/ports/search/simple/: bookmark.rs  config_reader.rs  error.rs  mod.rs  simple_bookmark_search_engine_adapter.rs
bookmarks/src/ports/search/tantivy/: mod.rs  tantivy_bookmark_search_engine_adapter.rs
