[package]
name = "bookmarks"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
warp = "0.3"

[dev-dependencies]
serde_json = "1.0"
spectral = "0.6"